Fix modal layout on small screens.

--- a/csapp/app/css/update.css
+++ b/csapp/app/css/update.css
@@ -11,7 +11,7 @@ body > .ember-view {
 	margin-bottom: 25px;
 }
 
-#content {
+#cloudstead-content {
 	padding-bottom: 1em;
 }
 
@@ -33,7 +33,7 @@ body > .ember-view {
 	background-color: #fff;
 	left: 0;
 	margin: auto;
-	position: absolute;
+	position: relative;
 	top: 0;
 	right: 0;
 	margin-top: 100px;
